d3dvideosink: Deactivate the fallback pool and unref the fallback buffer when resetting

Otherwise we will still have a reference to the surface left, which would
prevent activating the sink again later. E.g. after we lost the device.

Hopefully fixes https://bugzilla.gnome.org/show_bug.cgi?id=744615